// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EnquiryTypeQuery renders as expected 1`] = `
<FormSection>
  <Question
    text="What is your enquiry about?"
  />
  <RadioGroup
    error={null}
  >
    <FieldError
      text={null}
    />
    <RadioButton
      fieldName="enquiryType"
      label="General enquiry"
      validation={[Function]}
      value="generalEnquiry"
    />
    <RadioButton
      fieldName="enquiryType"
      label="Service issues"
      validation={[Function]}
      value="serviceIssues"
    />
    <RadioButton
      fieldName="enquiryType"
      label="Lost property"
      validation={[Function]}
      value="lostProperty"
    />
    <RadioButton
      fieldName="enquiryType"
      label="Staff"
      validation={[Function]}
      value="staff"
    />
    <RadioButton
      fieldName="enquiryType"
      label="Service updates"
      validation={[Function]}
      value="serviceUpdates"
    />
  </RadioGroup>
</FormSection>
`;

exports[`EnquiryTypeQuery renders with an error 1`] = `
<FormSection>
  <Question
    text="What is your enquiry about?"
  />
  <RadioGroup
    error="Required"
  >
    <FieldError
      text="Required"
    />
    <RadioButton
      fieldName="enquiryType"
      label="General enquiry"
      validation={[Function]}
      value="generalEnquiry"
    />
    <RadioButton
      fieldName="enquiryType"
      label="Service issues"
      validation={[Function]}
      value="serviceIssues"
    />
    <RadioButton
      fieldName="enquiryType"
      label="Lost property"
      validation={[Function]}
      value="lostProperty"
    />
    <RadioButton
      fieldName="enquiryType"
      label="Staff"
      validation={[Function]}
      value="staff"
    />
    <RadioButton
      fieldName="enquiryType"
      label="Service updates"
      validation={[Function]}
      value="serviceUpdates"
    />
  </RadioGroup>
</FormSection>
`;
